--- a/CB-24-Proyecto-FAB-Frontend/package.json
+++ b/CB-24-Proyecto-FAB-Frontend/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-datepicker": "^6.2.0",
+    "date-fns": "^3.6.0",
     "react": "^18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3"
