--- a/CB-24-Proyecto-FAB-Frontend/package.json
+++ b/CB-24-Proyecto-FAB-Frontend/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/react-datepicker": "^6.2.0",
+    "date-fns": "^3.6.0",
     "react": "^18.3.1",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3"
